SUBDIRS = man8
EXTRA_DIST = ccs-auditd ccs-ccstree ccs-checkpolicy ccs-domainmatch ccs-editpolicy ccs-editpolicy-agent ccs-findtemp ccs-init ccs-ld-watch ccs-loadpolicy ccs-notifyd ccs-pathmatch ccs-patternize ccs-queryd ccs-savepolicy ccs-setlevel ccs-setprofile ccs-sortpolicy init_policy.sh tomoyo-init tomoyo_init_policy.sh
